--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_dotenv: ^5.2.1
+  flutter_svg_provider: ^1.0.7
   hugeicons: ^0.0.10
   ionicons: ^0.2.2
   provider: ^6.1.4
@@ -23,4 +25,6 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  assets:
+    - .env
   uses-material-design: true
