--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   share_plus: ^10.1.4
   shared_preferences: ^2.5.3
   url_launcher: ^6.3.1
+  simple_fontellico_progress_dialog: ^0.3.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
